<resources>
    <string name="app_name">SimpleInstagram</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="text_home">home</string>
    <string name="text_favorites">favorites</string>
    <string name="text_create">create</string>
    <string name="text_search">search</string>
    <string name="text_profile">profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
