<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/text_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_create"
        android:enabled="true"
        android:icon="@drawable/ic_add_a_photo_black_24dp"
        android:title="@string/text_create"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/text_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/text_profile"
        app:showAsAction="ifRoom" />
</menu>